--- a/apps/ecommerce/customers/listing.html
+++ b/apps/ecommerce/customers/listing.html
@@ -4584,14 +4584,14 @@ License: For each use you must have a valid license purchased only from above li
 												</li>
 												<!--end::Item-->
 												<!--begin::Item-->
-												<li class="breadcrumb-item text-gray-600 fw-bold lh-1">Customers</li>
+												<li class="breadcrumb-item text-gray-600 fw-bold lh-1">User</li>
 												<!--end::Item-->
 											</ul>
 											<!--end::Breadcrumb-->
 											<!--begin::Page title-->
 											<div class="page-title d-flex align-items-center me-3">
 												<!--begin::Title-->
-												<h1 class="page-heading d-flex text-gray-900 fw-bolder fs-1 flex-column justify-content-center my-0">Customer Listing</h1>
+												<h1 class="page-heading d-flex text-gray-900 fw-bolder fs-1 flex-column justify-content-center my-0">User Listing</h1>
 												<!--end::Title-->
 											</div>
 											<!--end::Page title-->
@@ -4741,7 +4741,7 @@ License: For each use you must have a valid license purchased only from above li
 													</i>Export</button>
 													<!--end::Export-->
 													<!--begin::Add customer-->
-													<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#kt_modal_add_customer">Add Customer</button>
+													<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#kt_modal_add_customer">Add User</button>
 													<!--end::Add customer-->
 												</div>
 												<!--end::Toolbar-->
@@ -4767,7 +4767,7 @@ License: For each use you must have a valid license purchased only from above li
 																<input class="form-check-input" type="checkbox" data-kt-check="true" data-kt-check-target="#kt_customers_table .form-check-input" value="1" />
 															</div>
 														</th>
-														<th class="min-w-125px">Customer Name</th>
+														<th class="min-w-125px">User Name</th>
 														<th class="min-w-125px">Email</th>
 														<th class="min-w-125px">Status</th>
 														<th class="min-w-125px">IP Address</th>
