--- a/apps/subscriptions/list.html
+++ b/apps/subscriptions/list.html
@@ -16,7 +16,7 @@ License: For each use you must have a valid license purchased only from above li
 	<!--begin::Head-->
 	<head>
 <base href="../../" />
-		<title>Metronic - The World's #1 Selling Bootstrap Admin Template by KeenThemes</title>
+		<title>Empower Chess</title>
 		<meta charset="utf-8" />
 		<meta name="description" content="The most advanced Bootstrap 5 Admin Theme with 40 unique prebuilt layouts on Themeforest trusted by 100,000 beginners and professionals. Multi-demo, Dark Mode, RTL support and complete React, Angular, Vue, Asp.Net Core, Rails, Spring, Blazor, Django, Express.js, Node.js, Flask, Symfony & Laravel versions. Grab your copy now and get life-time updates for free." />
 		<meta name="keywords" content="metronic, bootstrap, bootstrap 5, angular, VueJs, React, Asp.Net Core, Rails, Spring, Blazor, Django, Express.js, Node.js, Flask, Symfony & Laravel starter kits, admin themes, web design, figma, web development, free templates, free admin themes, bootstrap theme, bootstrap template, bootstrap dashboard, bootstrap dak mode, bootstrap button, bootstrap datepicker, bootstrap timepicker, fullcalendar, datatables, flaticon" />
@@ -4834,11 +4834,11 @@ License: For each use you must have a valid license purchased only from above li
 																<input class="form-check-input" type="checkbox" data-kt-check="true" data-kt-check-target="#kt_subscriptions_table .form-check-input" value="1" />
 															</div>
 														</th>
-														<th class="min-w-125px">Customer</th>
-														<th class="min-w-125px">Status</th>
-														<th class="min-w-125px">Billing</th>
-														<th class="min-w-125px">Product</th>
-														<th class="min-w-125px">Created Date</th>
+														<th class="min-w-125px">subscription id</th>
+														<th class="min-w-125px"> user</th>
+														<th class="min-w-125px">package</th>
+														<th class="min-w-125px"> payment date</th>
+														<th class="min-w-125px">expiry date</th>
 														<th class="text-end min-w-70px">Actions</th>
 													</tr>
 												</thead>
